Fix NumericTextBox missing borders in the Bootstrap theme. Closes #818

--- a/styles/web/kendo.common-bootstrap.core.less
+++ b/styles/web/kendo.common-bootstrap.core.less
@@ -62,3 +62,17 @@
 input.k-textbox {
    height: 2.43em;
 }
+
+.k-textbox > input,
+.k-autocomplete .k-input,
+.k-picker-wrap .k-input,
+.k-numeric-wrap .k-input,
+.k-dropdown-wrap .k-input,
+.k-selectbox .k-input {
+      padding: 0.167em 0;
+}
+
+.k-webkit .k-rtl .k-widget .k-dropdown-wrap .k-input,
+.k-webkit .k-rtl .k-widget .k-numeric-wrap .k-input {
+    margin-right: 0;
+}
